Fixed table layout on mobile

--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -495,6 +495,10 @@ blockquote {
   }
 
 
+  #summary_table {
+    width: 100%;
+	}
+
 	.navbar-brand {
 		padding: 15px 10px;
 	}
